# multiUAV_system

./: .gitignore  .gitmodules  README.md
aerialcore_common/: CMakeLists.txt  README.md  package.xml
aerialcore_common/srv/: ConfigMission.srv  finishMission.srv
docker/: Dockerfile  Dockerfile.gcs  Dockerfile.sim  Readme.md  container_run.sh  initDev.gcs.sh  initDev.sh  initDev.sim.sh
multiuav_bringup/devices/M300/: Readme.md
multiuav_bringup/devices/M300/docker/: Dockerfile.muavs  Dockerfile.ros1  UserConfig.txt  container_build.sh  container_run.sh  entrypoint.sh
multiuav_bringup/devices/vtol/: px4-vtol-sim.yaml
multiuav_bringup/docker/: createContainer.sh
multiuav_bringup/launch/: simulate_muav.launch
multiuav_gcs_bringup/: CMakeLists.txt  package.xml
multiuav_gcs_bringup/devices/M210/: M210-RosRTCP.yml
multiuav_gcs_bringup/devices/M300/: Readme.md  ros-rstp-stream_setup.yaml
multiuav_gcs_bringup/docker/: Production.Dockerfile  container_run.sh
multiuav_gcs_bringup/launch/: simulate_uav.launch
multiuav_gcs_bringup/scripts/: uavServices.py
multiuav_interfaces/: CMakeLists.txt  package.xml  package.xml.save
