<?xml version="1.0"?>
<package format="2">
  <name>multiuav_interfaces</name>
  <version>0.0.1</version>
  <description>The multiuav_interfaces package</description>

  <maintainer email="arturotorres@us.es">Arturo Torres González</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
